# cv-info-extractor

./: README.md  app.py  pyproject.toml  requirements.txt
